Fix link color in dark mode

--- a/src/pages/Popup/Popup.scss
+++ b/src/pages/Popup/Popup.scss
@@ -4,11 +4,6 @@
   --root-font-size: 11pt;
 }
 
-a {
-  color: var(--primary);
-  text-decoration: none;
-}
-
 #drafts {
   padding: 0;
 
