--- a/src/pages/shared.scss
+++ b/src/pages/shared.scss
@@ -38,6 +38,11 @@ $spacing-levels: 0, 1, 2, 3, 4, 5, 6, 7;
     --secondary-lightness: 48.431372549%;
     --secondary-text: #ffffff;
 
+    a {
+        color: var(--squatnotes-link-color);
+        text-decoration: none;
+    }
+
     // Normalization
     button,
     textarea,
@@ -77,7 +82,6 @@ $spacing-levels: 0, 1, 2, 3, 4, 5, 6, 7;
     .w-100 {
         width: 100% !important;
     }
-
 
     // Headers
     h1,
